syntax = "proto3";

package dlkit.proto.proxy;



service ProxySession {
  rpc GetProxyCondition() returns (ProxyCondition) {}
  rpc GetProxy(osid.proxy.ProxyCondition) returns (Proxy) {}
}